added some work on languages

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -221,9 +221,9 @@
 		
 		\begin{itemize}
 			\item \textbf{Ruby on Rails} \\
-			Ruby on Rails is a web framework also known as Rails built in the programming language Ruby \cite{rubyonrails}.  
+			Ruby on Rails is a web framework also known as Rails built in the programming language Ruby. It is open source and free. Rails supports web standards such as JSON, or XML for data transfer. Ruby on Rails is a great canidate for the framework team three will use, but team three has more experience with Python then Ruby \cite{rubyonrails}.  
 			\item \textbf{Django} \\
-			Django is a Python built framework and is one the most popular web frameworks. Django is well sported out of the box with numerous built in interfaces and a healthy ecosystem of free and open third-party add-ons to add features \cite{django}.
+			Django is a Python built framework and is one the most popular web frameworks. Django has numerous built in interfaces and a healthy ecosystem of free and open third-party add-ons to add features. Django has a very easy learning curve, becuase it is built in Python. The framework is fast, scalable and secure \cite{django}.
 			\item \textbf{Play} \\
 
 			Play is a Java Web framework. This framework as a large appeal for us as we will be writing our Android Application in Java, and there is a huge amount of support for the language which would be helpful \cite{play}.
