--- a/seting_etc.tex
+++ b/seting_etc.tex
@@ -25,6 +25,8 @@
 \newcommand{\Appendix}{	\makeatletter 
 					\appendix
 					\renewcommand\chaptername{Appendix}}
+				
+\renewcommand{\abstractname}{Executive Summary}
 
 \NewDocumentCommand{\rot}{O{45} O{1em} m}{\makebox[#2][l]{\rotatebox{#1}{#3}}}%
 \newcolumntype{M}{>{\centering\arraybackslash}m}
