--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -221,7 +221,7 @@
 		
 		\begin{itemize}
 			\item \textbf{Ruby on Rails} \\
-			Ruby on Rails is a web framework also known as Rails built in the programming language Ruby. It is open source and free. Rails supports web standards such as JSON, or XML for data transfer. Ruby on Rails is a great canidate for the framework team three will use, but team three has more experience with Python then Ruby \cite{rubyonrails}.  
+			Ruby on Rails is a web framework also known as Rails built in the programming language Ruby. It is open source and free. Rails supports web standards such as JSON, or XML for data transfer. Ruby on Rails is a great candidate for the framework team three will use, but team three has more experience with Python then Ruby \cite{rubyonrails}.  
 			\item \textbf{Django} \\
 			Django is a Python built framework and is one the most popular web frameworks. Django has numerous built in interfaces and a healthy ecosystem of free and open third-party add-ons to add features. Django has a very easy learning curve, becuase it is built in Python. The framework is fast, scalable and secure \cite{django}.
 			\item \textbf{Play} \\
@@ -234,8 +234,7 @@
 			\item \textbf{Revel} \\
 			Revel is the Go language web framework. With the Go language, utilizing the Revel framework is the most appropriate path to take \cite{revel}.
 			\item \textbf{TurboGears}\\
-
-			This is a next generation Python web framework. Taking cues from frameworks like Django and Rails, this framework uses advanced Python and other languages to build a web app \cite{turbogears}.
+			This is a next generation Python web framework. Taking cues from frameworks like Django and Rails, this framework uses advanced Python and other languages to build a web app. This is used for more complex applications, and is not very well supported \cite{turbogears}.
 		\end{itemize}
 		
 		
