--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -229,7 +229,7 @@
 			\item  \textbf{Express.js}\\
 			Express.js is a minimal and flexible Node.js web application framework that provides a robust set of features for web and mobile applications, as well as API's. It is relatively minimal with many features available as plugins. Express is the back-end part of the MEAN stack, together with MongoDB database and AngularJS front-end framework. \cite{express}.
 			\item \textbf{Laravel} \\
-			Laravel is a popular PHP based web framework \cite{laravel}. 
+			Laravel is a PHP web framework that utilizes the model-view-control architectural pattern.  Laravel has an efficient dependency manager and provides built-in ways to access relational databases.  It also contains utilities for application deployment and maintenance. \cite{laravel}. 
 			\item \textbf{Revel} \\
 			Revel is the Go language web framework. With the Go language, utilizing the Revel framework is the most appropriate path to take \cite{revel}.
 			\item \textbf{TurboGears}\\
