--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -231,7 +231,7 @@
 			\item \textbf{Laravel} \\
 			Laravel is a PHP web framework that utilizes the model-view-control architectural pattern.  Laravel has an efficient dependency manager and provides built-in ways to access relational databases.  It also contains utilities for application deployment and maintenance. \cite{laravel}. 
 			\item \textbf{Revel} \\
-			Revel is the Go language web framework. With the Go language, utilizing the Revel framework is the most appropriate path to take \cite{revel}.
+			Revel is the Go language web framework. None of the engineers on team three have Go experience. Revel is relatively new so there is not much documentation for trouble shooting. Revel compiles code in templates for the developer automatically. It also gives descriptive error messages, making it easier to debug. However we are looking for something with more familiarity. \cite{revel}.
 			\item \textbf{TurboGears}\\
 			This is a next generation Python web framework. Taking cues from frameworks like Django and Rails, this framework uses advanced Python and other languages to build a web app. This is used for more complex applications, and is not very well supported \cite{turbogears}.
 		\end{itemize}
