--- a/title.tex
+++ b/title.tex
@@ -47,7 +47,7 @@
 		%----------------------------------------------------------------------------------------
 		
 		\HRule \\[0.2cm]
-		{ \huge \bfseries Final Project Proposal\\ ArcelorMittal USA\\ Safety Equipment Bar Code Scanner}\\[0.2cm] % Title of your document
+		{ \huge \bfseries Final Project Proposal\\ ArcelorMittal \\ Safety Equipment Bar Code Scanner}\\ % Title of your document
 		\HRule \\[1.5cm]
 		
 		%----------------------------------------------------------------------------------------
@@ -66,7 +66,7 @@
 		\end{minipage}% A new line will break it so dont Ian!
 		\begin{minipage}{0.3\textwidth}
 			\centering
-			{\LARGE Design Team 3}
+			{\LARGE Design Team Three}
 		\end{minipage}
 		\begin{minipage}[t]{0.3\textwidth}
 			\begin{flushright} \large
@@ -105,7 +105,7 @@
 			\end{center}
 		\end{minipage}\\[2cm]
 	\begin{abstract}
-	The purpose of this project is to create a way to electronically keep track of safety inspection information for various safety equipment in ArcelorMittal plants.  This will improve the current method of manual, paper records and minimize data loss.This will also allow inspections results to be automatically consolidated in one central database.  Reports will then be generated from the central database to determine items in each location that pass or fail inspection, drastically improving the current record-keeping system of safety equipment at ArcelorMittal.
+	The purpose of this project is to create a way to electronically keep track of safety inspection information for various safety equipment in ArcelorMittal plants. This will improve the current method of manual, paper records and minimize data loss. This will also allow inspection results to be automatically consolidated in one central database.  Reports will then be generated from the central database to determine items in each location that pass or fail inspection, drastically improving the current record-keeping system of safety equipment at ArcelorMittal.
 	\end{abstract}
 		%\\[1cm] 
 		% Include a department/university logo - this will require the graphicx package
